fix: colored clip path headings don't get extra margins

--- a/src/css/_c4aa-clipPaths.css
+++ b/src/css/_c4aa-clipPaths.css
@@ -36,7 +36,8 @@ columns block */
 	margin-bottom: 2rem;
 }
 
-.is-style-c4aa-clipPath-heading,
+.is-style-c4aa-clipPath-heading, 
+.is-style-c4aa-clipPath-heading.has-background,
 .archive h2.entry-title,
 header:not(.featured-image) h1.entry-title,
 .widget-title,
